--- a/DataStructures.Tests/DataStructures.Tests.csproj
+++ b/DataStructures.Tests/DataStructures.Tests.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net5.0</TargetFramework>
 
         <IsPackable>false</IsPackable>
+
+        <RootNamespace>DataStructures.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
